--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,8 +3,18 @@
 {% block content %}
 <h1>Products</h1>
 
+<a href="{% url 'products:create' %}">새 글 작성</a>
+
 <ul>
-    <p>products</p>
+    {% for product in products %}
+    <li>
+        <a href="{% url 'products:product_detail' product.id %}">
+            <div>[{{ product.id }}] {{ product.title }} {{ product.author }}</div>
+        </a>
+        <br>
+    </li>
+
+    {% endfor %}
 </ul>
 
 {% endblock content %}
