--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -17,13 +17,13 @@
 
 <hr>
 
-{% if user.is_authenticated and product.author == user %}
-<a href="{% url 'articles:update' article.pk %}"><button>글수정</button></a>
-<form action="{% url 'articles:delete' article.pk %}" method="POST">
+
+
+<form action="{% url 'products:delete' product.pk %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="글삭제">
 </form>
-{% endif %}
+
 
 <hr>
 
