--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,7 @@
 <hr>
 
 
-
+<a href="{% url 'products:update' product.pk %}"><button>글수정</button></a>
 <form action="{% url 'products:delete' product.pk %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="글삭제">
