--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="{% url 'accounts:signup'%}">회원가입</a>
+    <div class="navbar">
+        {% if request.user.is_authenticated %}
+        <h3>안녕하세요, {{ user }}님</h3>
+
+        {% else %}
+        <a href="{% url 'accounts:signup'%}">회원가입</a>
+        <a href="{% url 'accounts:login'%}">로그인</a>
+        {% endif %}
+    </div>
     <div class="container">
         {% block content %}
         {% endblock content %}
