profile_update func

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
             <input type="submit" value="로그아웃">
         </form>
 
+        <a href="{% url 'accounts:update' %}">회원정보수정</a>
+        
         {% else %}
         <a href="{% url 'accounts:signup'%}">회원가입</a>
         <a href="{% url 'accounts:login'%}">로그인</a>
