--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div class="navbar">
         {% if request.user.is_authenticated %}
@@ -16,7 +18,12 @@
         </form>
 
         <a href="{% url 'accounts:update' %}">회원정보수정</a>
-        
+
+        <form action="{% url 'accounts:delete' %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="회원탈퇴"></input>
+        </form>
+
         {% else %}
         <a href="{% url 'accounts:signup'%}">회원가입</a>
         <a href="{% url 'accounts:login'%}">로그인</a>
@@ -27,4 +34,5 @@
         {% endblock content %}
     </div>
 </body>
+
 </html>
