--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,31 +1,48 @@
 {% extends "base.html" %}
 
+{% load static %}
 {% block content %}
 
-<h2>글 상세 페이지</h2>
-<p>제목: {{ product.title }}</p>
+<div class="row justify-content-center align-items-center" style="height: 100vh;">
+    <div class="col-md-6">
+        <P><img src="/media/images/teddy-bear.png" class="card-img-top" alt="..."></P>
+        <p>상품명: {{ product.title }}</p>
 
-{% if product.image %}
-<img src="{{ product.image.url }}">
-{% endif %}
+        {% if product.image %}
+        <img src="{{ product.image.url }}">
+        {% endif %}
 
-<p>내용: {{ product.content }}</p>
-<p>작성일시: {{ product.created_at }}</p>
-<p>수정일시: {{ product.updated_at }}</p>
+        <p>내용: {{ product.content }}</p>
+        <p>글 작성일: {{ product.created_at }}</p>
 
-<a href="{% url 'products:products' %}"><button>목록 보기</button></a>
+        
+        <hr>
+        
+        <div class="row">
+            <div class="col text-start">
+                <a href="{% url 'products:update' product.pk %}" class="btn btn-warning">글 수정</a>
+            </div>
+            <div class="col text-end">
+                <form action="{% url 'products:delete' product.pk %}" method="POST" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">글 삭제</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="floating-button" class="text-end">
+        <a href="{% url 'products:products' %}" id="back-to-top-button">Home</a>
+    </div>
+</div>
 
-<hr>
-
-
-<a href="{% url 'products:update' product.pk %}"><button>글수정</button></a>
-<form action="{% url 'products:delete' product.pk %}" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="글삭제">
-</form>
-
-
-<hr>
-
-
+<script>
+    window.onload = function () {
+        document.getElementById("back-to-top-button").addEventListener("click", function (event) {
+            event.preventDefault(); // 기본 동작 방지
+            window.location.href = "/products"; // 홈으로 이동
+        });
+    };
+</script>
 {% endblock content %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
