--- a/products/templates/products/update.html
+++ b/products/templates/products/update.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Update Product</h1>
+<div class="row justify-content-center align-items-center vh-100">
+    <div class="col-md-6">
+        <h1 class="text-center mb-5">상품 수정</h1>
 
-<form action="{% url 'products:update' product.pk %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">수정</button>
-</form>
-
-<a href="{% url 'products:product_detail' product.pk %}">이전으로</a>
+        <form action="{% url 'products:update' product.pk %}" method="POST" class="mb-3">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-warning d-block">수정</button>
+        </form>
+        <a href="{% url 'products:product_detail' product.pk %}" class="btn btn-secondary">이전으로</a>
+    </div>
+</div>
 {% endblock content %}
