--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,34 +6,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Products</title>
+    
 </head>
 
 <body>
-    <div class="navbar">
-        {% if request.user.is_authenticated %}
-        <h3>안녕하세요, {{ user }}님</h3>
-        <form action="{% url 'accounts:logout' %}" method="POST">
-            {% csrf_token %}
-            <input type="submit" value="로그아웃">
-        </form>
 
-        <a href="{% url 'accounts:update' %}">회원정보수정</a>
-
-        <form action="{% url 'accounts:delete' %}" method="POST">
-            {% csrf_token %}
-            <input type="submit" value="회원탈퇴"></input>
-        </form>
-
+    <div class="navigation">
+        <ul class="nav justify-content-end">
+            {% if request.user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">{{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:update' %}">회원정보수정</a>
+            </li>
+            <li class="nav-item">
+                <form action="{% url 'accounts:logout' %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" class="nav-link logout-btn">로그아웃</button>
+                </form>
+            </li>
+            <li class="nav-item">
+                <form action="{% url 'accounts:delete' %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" class="nav-link delete-btn">회원탈퇴</button>
+                </form>
+            </li>
+        </ul>
         {% else %}
-        <a href="{% url 'accounts:signup'%}">회원가입</a>
-        <a href="{% url 'accounts:login'%}">로그인</a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{% url 'accounts:signup'%}">회원가입</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:login'%}">로그인</a>
+            </li>
+        </ul>
         {% endif %}
     </div>
+    
+    
     <div class="container">
         {% block content %}
         {% endblock content %}
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
