--- a/products/templates/products/create.html
+++ b/products/templates/products/create.html
@@ -8,7 +8,7 @@
         <form action="{% url 'products:create' %}" method="POST" enctype="multipart/form-data" class="mb-3">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary d-block">저장</button>
+            <button type="submit" class="btn btn-primary d-block">등록하기</button>
         </form>
         <a href="{% url 'products:products' %}" class="btn btn-secondary">목록으로</a>
     </div>
