--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/media/images/bgd.jpg');
+    background-image: url('/static/image/bgd.jpg');
     background-size: cover;
     /* 배경 이미지를 화면에 꽉 채우도록 설정합니다. */
     background-position: center;
