--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>회원정보수정</h1>
-    
-    <form action="{% url 'accounts:update' %}" method="POST">
-        {{ form.as_p }}
+<h1>회원정보수정</h1>
+
+<form action="{% url 'accounts:update' %}" method="POST">
+    {{ form.as_p }}
+    {% csrf_token %}
+    <button type="submit">수정하기</button>
+</form>
+
+<div class="delete text-end">
+    <form action="{% url 'accounts:delete' %}" method="POST">
         {% csrf_token %}
-        <button type="submit">수정하기</button>
+        <button type="submit" class="btn btn-danger">회원탈퇴</button>
     </form>
 
+</div>
 {% endblock %}
