--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,7 +4,7 @@
     <h1>{{ member.username }}의 프로필 페이지</h1>
 
     <div>
-        <h2>username : {{ member.username }}</h2>
+        <h2>이름 : {{ member.username }}</h2>
         <p>
             팔로워 : {{ member.followers.count }}명
             팔로잉 : {{ member.following.count }}명
@@ -25,6 +25,6 @@
         
     </div>
 
-    <a href="/index/">홈으로 돌아가기</a>
+    <a href="/">홈으로 돌아가기</a>
 
 {% endblock content %}
