--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,30 +1,59 @@
 {% extends 'base.html' %}
+{% load humanize %}
 
 {% block content %}
-    <h1>{{ member.username }}의 프로필 페이지</h1>
+<h1>{{ user.username }}의 프로필 페이지</h1>
 
-    <div>
-        <h2>이름 : {{ member.username }}</h2>
-        <p>
-            팔로워 : {{ member.followers.count }}명
-            팔로잉 : {{ member.following.count }}명
-        </p>
-    </div>
+<div>
+    <h2>이름 : {{ user.username }}</h2>
+    <p>
+        팔로워 : {{ user.followers.count }}명
+        팔로잉 : {{ user.following.count }}명
+    </p>
+</div>
 
-    <div>
-        {% if request.user != member %}
-        <form action="{% url 'users:follow' member.pk %}" method="POST">
-            {% csrf_token %}
-            {% if user in member.followers.all %}
-                <button type="submit">언팔로우</button>
-            {% else %}
-                <button type="submit">팔로우</button>
-            {% endif %}
-        </form>
+<div>
+    {% if request.user != user %}
+    <form action="{% url 'users:follow' user.pk %}" method="POST">
+        {% csrf_token %}
+        {% if request.user in user.followers.all %}
+        <button type="submit">언팔로우</button>
+        {% else %}
+        <button type="submit">팔로우</button>
         {% endif %}
-        
+    </form>
+    {% endif %}
+</div>
+
+<hr>
+
+<h2>좋아요한 상품들</h2>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    {% for product in liked_products %}
+    <div class="col">
+        <div class="card bg-transparent border-0" style="width: 18rem;">
+            <a href="{% url 'products:product_detail' product.id %}">
+                <div class="image">
+                    {% if product.image %}
+                    <img src="{{ product.image.url }}" style="width: 100%; height: auto;">
+                    {% endif %}
+                </div>
+            </a>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-transparent">{{ product.title }}</li>
+                <li class="list-group-item bg-transparent">{{ product.price|intcomma }}원</li>
+                <form action="{% url 'users:unlike' product.pk %}" method="post" class="like-form" data-product-id="{{ product.id }}">
+                    {% csrf_token %}
+
+                    <button type="submit" class="btn btn-outline-danger unlike-btn">찜하기 취소</button>
+                </form>
+            </ul>
+        </div>
     </div>
+    {% endfor %}
+</div>
 
-    <a href="/">홈으로 돌아가기</a>
+<hr>
 
+<a href="/">홈으로 돌아가기</a>
 {% endblock content %}
