--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,7 @@
         
         <p>상품명: {{ product.title }}</p>
         <p>내용: {{ product.content }}</p>
-        <p>내용: {{ product.author }}</p>
+        <p>작성자: <a href="{% url 'users:profile' product.author.username %}">{{ product.author }}</a></p>
         <p>글 작성일: {{ product.created_at|date:"Y/m/d H:i" }}</p>
 
         
