--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -42,11 +42,12 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item bg-transparent">{{ product.title }}</li>
                 <li class="list-group-item bg-transparent">{{ product.price|intcomma }}원</li>
+                {% if request.user == user %}
                 <form action="{% url 'users:unlike' product.pk %}" method="post" class="like-form" data-product-id="{{ product.id }}">
                     {% csrf_token %}
-
                     <button type="submit" class="btn btn-outline-danger unlike-btn">찜하기 취소</button>
                 </form>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -55,5 +56,5 @@
 
 <hr>
 
-<a href="/">홈으로 돌아가기</a>
+<a href="/" class="btn btn-primary float-end">홈으로 돌아가기</a>
 {% endblock content %}
