--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,15 @@
     <a href="{% url 'products:products' %}" class="text-decoration-none">
         <h1 class="text-center mb-5">스파르타 마켓</h1>
     </a>
-    
+    <div class="container my-5 text-center">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 px-0">
+                <form action="{% url 'products:search' %}" method="get">
+                    <input type="text" name="q" class="form-control" placeholder="Search" aria-label="Search">
+                </form>
+            </div>
+        </div>
+    </div>
     <button type="button" class="btn btn-primary">
         <a href="{% url 'products:create' %}" class="text-white text-decoration-none">물건 판매하기</a>
     </button>
@@ -17,7 +25,38 @@
 <hr>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    
+    {% if results %}
+    {% for product in results %}
+    <div class="col">
+        <div class="card bg-transparent border-0" style="width: 18rem;">
+            <a href="{% url 'products:product_detail' product.id %}">
+                <div class="image">
+                    {% if product.image %}
+                    <img src="{{ product.image.url }}" style="width: 100%; height: auto;">
+                    {% else %}
+                    <img src="/static/image/user.png" style="width: 100%; height: auto;">
+                    {% endif %}
+                </div>
+            </a>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-transparent">{{ product.title }}</li>
+                <li class="list-group-item bg-transparent">{{ product.price|intcomma }}원</li>
+                <form action="{% url 'products:like' product.pk %}" method="POST"
+                    class="list-group-item bg-transparent">
+                    {% csrf_token %}
+                    {% if user in product.like_users.all %}
+                    <p>❤ {{ product.like_users.count }} <input type="submit" value="찜하기 취소"
+                            class="btn btn-outline-danger"></p>
+                    {% else %}
+                    <p>❤ {{ product.like_users.count }} <input type="submit" value="찜하기"
+                            class="btn btn-outline-primary"></p>
+                    {% endif %}
+                </form>
+            </ul>
+        </div>
+    </div>
+    {% endfor %}
+    {% else %}
     {% for product in products %}
     <div class="col">
         <div class="card bg-transparent border-0" style="width: 18rem;">
@@ -48,6 +87,7 @@
         </div>
     </div>
     {% endfor %}
+    {% endif %}
 </div>
 
 {% endblock content %}
