--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -37,11 +37,11 @@
     <div class="col">
         <div class="card bg-transparent border-0" style="width: 18rem;">
             <a href="{% url 'products:product_detail' product.id %}">
-                <div class="image">
+                <div class="image" style="width: 100%; height: 300px; overflow: hidden;">
                     {% if product.image %}
-                    <img src="{{ product.image.url }}" style="width: 100%; height: auto;">
+                    <img src="{{ product.image.url }}" style="width: 100%; height: 100%; object-fit: cover;">
                     {% else %}
-                    <img src="/static/image/user.png" style="width: 100%; height: auto;">
+                    <img src="/static/image/user.png" style="width: 100%; height: 100%; object-fit: cover;">
                     {% endif %}
                 </div>
             </a>
@@ -76,11 +76,11 @@
     <div class="col">
         <div class="card bg-transparent border-0" style="width: 18rem;">
             <a href="{% url 'products:product_detail' product.id %}">
-                <div class="image">
+                <div class="image" style="width: 100%; height: 300px; overflow: hidden;">
                     {% if product.image %}
-                    <img src="{{ product.image.url }}" style="width: 100%; height: auto;">
+                    <img src="{{ product.image.url }}" style="width: 100%; height: 100%; object-fit: cover;">
                     {% else %}
-                    <img src="/static/image/user.png" style="width: 100%; height: auto;">
+                    <img src="/static/image/user.png" style="width: 100%; height: 100%; object-fit: cover;">
                     {% endif %}
                 </div>
             </a>
@@ -106,13 +106,13 @@
     {% else %}
     {% for product in products %}
     <div class="col">
-        <div class="card bg-transparent border-0" style="width: 18rem;">
+        <div class="card bg-transparent border-0" style="width: 18rem; ">
             <a href="{% url 'products:product_detail' product.id %}">
-                <div class="image">
+                <div class="image" style="width: 100%; height: 300px; overflow: hidden;">
                     {% if product.image %}
-                    <img src="{{ product.image.url }}" style="width: 100%; height: auto;">
+                    <img src="{{ product.image.url }}" style="width: 100%; height: 100%; object-fit: cover;">
                     {% else %}
-                    <img src="/static/image/user.png" style="width: 100%; height: auto;">
+                    <img src="/static/image/user.png" style="width: 100%; height: 100%; object-fit: cover;">
                     {% endif %}
                 </div>
             </a>
