--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -7,11 +7,11 @@
 <div>
     <div class="image">
         <h2>프로필 사진</p>
-        {% if user.profile_image %}
-        <img src="{{ user.profile_image.url }}" style="width: 20%; height: auto;">
-        {% else %}
-        <img src="/static/image/user.png" style="width: 20%; height: auto;">
-        {% endif %}
+            {% if user.profile_image %}
+            <img src="{{ user.profile_image.url }}" style="width: 20%; height: auto;">
+            {% else %}
+            <img src="/static/image/user.png" style="width: 20%; height: auto;">
+            {% endif %}
 
     </div>
     <h2>이름 : {{ user.username }}</h2>
@@ -36,17 +36,53 @@
 
 <hr>
 
+<h2>내가 등록한 상품들</h2>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    {% for product in sell_products %}
+    <div class="col">
+        <div class="card bg-transparent border-0" style="width: 18rem;">
+            <a href="{% url 'products:product_detail' product.id %}">
+                <div class="image" style="width: 100%; height: 300px; overflow: hidden;">
+                    {% if product.image %}
+                    <img src="{{ product.image.url }}" style="width: 100%; height: 100%; object-fit: cover;">
+                    {% else %}
+                    <img src="/static/image/user.png" style="width: 100%; height: 100%; object-fit: cover;">
+                    {% endif %}
+                </div>
+            </a>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-transparent">{{ product.title }}</li>
+                <li class="list-group-item bg-transparent">{{ product.price|intcomma }}원</li>
+                <form action="{% url 'products:like' product.pk %}" method="POST"
+                    class="list-group-item bg-transparent">
+                    {% csrf_token %}
+                    {% if user in product.like_users.all %}
+                    <p>❤ {{ product.like_users.count }} <input type="submit" value="찜하기 취소"
+                            class="btn btn-outline-danger"></p>
+                    {% else %}
+                    <p>❤ {{ product.like_users.count }} <input type="submit" value="찜하기"
+                            class="btn btn-outline-primary"></p>
+                    {% endif %}
+                </form>
+            </ul>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+<hr>
+
 <h2>좋아요한 상품들</h2>
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
     {% for product in liked_products %}
     <div class="col">
         <div class="card bg-transparent border-0" style="width: 18rem;">
             <a href="{% url 'products:product_detail' product.id %}">
-                <div class="image">
+                <div class="image" style="width: 100%; height: 300px; overflow: hidden;">
                     {% if product.image %}
-                    <img src="{{ product.image.url }}" style="width: 100%; height: auto;">
+                    <img src="{{ product.image.url }}" style="width: 100%; height: 100%; object-fit: cover;">
                     {% else %}
-                    <img src="/static/image/teddy-bear.png" style="width: 100%; height: auto;">
+                    <img src="/static/image/user.png" style="width: 100%; height: 100%; object-fit: cover;">
                     {% endif %}
                 </div>
             </a>
