--- a/products/templates/products/update.html
+++ b/products/templates/products/update.html
@@ -5,7 +5,7 @@
     <div class="col-md-6">
         <h1 class="text-center mb-5">상품 수정</h1>
 
-        <form action="{% url 'products:update' product.pk %}" method="POST" class="mb-3">
+        <form action="{% url 'products:update' product.pk %}" method="POST"  enctype="multipart/form-data" class="mb-3">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-warning d-block">수정</button>
